--- a/app/assets/stylesheets/infringement_emails.scss
+++ b/app/assets/stylesheets/infringement_emails.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the InfringementEmails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.form_info {
+  font-size: small;
+  font-style: italic;
+}
+
+#file-attachment {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
