Codeclimate errors fixed

--- a/app/assets/stylesheets/infringement_emails.scss
+++ b/app/assets/stylesheets/infringement_emails.scss
@@ -2,12 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.form_info {
+.form-info {
   font-size: small;
   font-style: italic;
 }
 
-#file-attachment {
-  margin-top: 20px;
+.file-attachment {
   margin-bottom: 20px;
+  margin-top: 20px;
 }
