--- a/app/views/infringement_emails/new.html.erb
+++ b/app/views/infringement_emails/new.html.erb
@@ -12,12 +12,12 @@
 
     <%= f.label :link, t('infringement_mailbox.link_title') %>
     <%= f.text_field :link, placeholder: t('infringement_mailbox.link_placeholder') %>
-    <span class="form_info"><%= t('infringement_mailbox.link_info') %></span>
+    <span class="form-info"><%= t('infringement_mailbox.link_info') %></span>
 
-    <div id="file-attachment">
+    <div class="" ="file-attachment">
       <%= f.label :attachment, t('infringement_mailbox.attachment_title') %>
       <%= f.file_field :attachment %>
-      <span class="form_info"><%= t('infringement_mailbox.attachment_info') %></span>
+      <span class="form-info"><%= t('infringement_mailbox.attachment_info') %></span>
     </div>
 
     <div>
