--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,7 +29,7 @@
             <%= event.scheduled.to_time.strftime(t('time.formats.short')) %>
             <span class="hide"><%= event.scheduled.strftime(t('time.formats.custom')) %></span>
             <% else %>
-            <span>Pendiente</span>
+            <span><%= t('backend.pending') %></span>
           <% end %>
         </td>
         <td class="event_txt">
