--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -19,7 +19,7 @@
     <p><strong><%= t('organizations.show.address') %>: </strong><%= @organization.address %></p>
     <p><strong><%= t('organizations.show.province') %>: </strong><%= @organization.province %></p>
     <p><strong><%= t('organizations.show.category') %>: </strong><%= @organization.category.name %></p>
-    <p><strong><%= t('organizations.show.description') %>: </strong><%= @organization.description.html_safe %></p>
+    <p><strong><%= t('organizations.show.description') %>: </strong><%= @organization.description.to_s.html_safe %></p>
     <p><strong><%= t('organizations.show.web') %>: </strong> <%= @organization.web %></p>
   </div>
 </div>
