--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -21,6 +21,22 @@
         <i class="fi-book size-18"> <%= t("backend.companies")%></i>
       </a>
     </li>
+    <% elsif current_user.lobby? %>
+    <li class="<%= active_menu('admin/organizations') %>">
+      <a href="<%= admin_organization_add_agents_path(organization_id: current_user.organization_id) %>">
+        <i class="fi-plus size-18"> <%= t("backend.add_agents")%></i>
+      </a>
+    </li>
+    <li class="<%= active_menu('admin/organizations') %>">
+      <a href="<%= admin_organization_add_interests_path(organization_id: current_user.organization_id) %>">
+        <i class="fi-plus size-18"> <%= t("backend.add_interests")%></i>
+      </a>
+    </li>
+    <li class="<%= active_menu('admin/organizations') %>">
+      <a href="<%= admin_organization_path(id: current_user.organization_id) %>">
+        <i class="fi-book size-18"> <%= t("backend.show_company")%></i>
+      </a>
+    </li>
     <% end %>
     <% if current_user.admin? %>
     <li class="<%= active_menu('areas') %>">
