--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -61,7 +61,8 @@
       <div class="small-12 error-radio-buttons"></div>
 
       <div id="lobby-activity-event">
-        Organización
+        <%= t('backend.meeting_lobby_activity_organization') %>
+
         <% if current_user.lobby? %>
           <%= hidden_field_tag  :organization_id, current_user.organization_id %>
           <%= f.autocomplete_field :organization_name, autocomplete_organization_name_organizations_path, :update_elements => {}, placeholder: t('backend.meeting_lobby_activity_input'), value: current_user.organization.name, readonly: true %>
