--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
     <div id="main-content" class="main-content">
       <div class="row">
         <div class="small-12">
-          <div class="box">
+          <div class="box small-12 box columns">
             <%= yield %>
           </div>
         </div>
