--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,18 @@
       </fieldset>
     <% end %>
 
+    <fieldset class="lobby-contact-info">
+      <legend> Datos de contacto </legend>
+      <%= f.label :lobby_contact_firstname, "Nombre" %>
+      <%= f.text_field :lobby_contact_firstname, value: calculate_firstname(@event) %>
+      <%= f.label :lobby_contact_lastname, "Apellidos" %>
+      <%= f.text_field :lobby_contact_lastname, value: calculate_lastname(@event) %>
+      <%= f.label :lobby_contact_phone, "Teléfono" %>
+      <%= f.text_field :lobby_contact_phone, value: calculate_phone(@event) %>
+      <%= f.label :lobby_contact_email, "Email" %>
+      <%= f.text_field :lobby_contact_email, value: calculate_email(@event) %>
+    </fieldset>
+
     <fieldset>
       <legend><%= t('backend.basic_data') %></legend>
       <%= f.label :title, t('backend.title') %>
