--- a/app/views/events/_attachment_fields.html.erb
+++ b/app/views/events/_attachment_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="nested-fields">
+<div class="nested-fields small-12 columns">
   <div class="row">
 
     <div class="small-12 columns">
