--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,65 +16,53 @@
 
     <% if admin_or_mananger_edit? %>
       <fieldset>
-        <%= f.label :title, "Organización que solicita la reunión" %>
-        <%= f.text_field :organization_name, disabled: true %>
+        <div class="small-12 column">
+          <%= f.label :title, "Organización que solicita la reunión" %>
+          <%= f.text_field :organization_name, disabled: true %>
+        </div>
       </fieldset>
     <% end %>
 
-    <fieldset class="lobby-contact-info">
-      <legend> Datos de contacto </legend>
-      <%= f.label :lobby_contact_firstname, "Nombre" %>
-      <%= f.text_field :lobby_contact_firstname, value: calculate_firstname(@event) %>
-      <%= f.label :lobby_contact_lastname, "Apellidos" %>
-      <%= f.text_field :lobby_contact_lastname, value: calculate_lastname(@event) %>
-      <%= f.label :lobby_contact_phone, "Teléfono" %>
-      <%= f.text_field :lobby_contact_phone, value: calculate_phone(@event) %>
-      <%= f.label :lobby_contact_email, "Email" %>
-      <%= f.text_field :lobby_contact_email, value: calculate_email(@event) %>
-    </fieldset>
-
     <fieldset>
       <legend><%= t('backend.basic_data') %></legend>
-      <%= f.label :title, t('backend.title') %>
-      <%= f.text_field :title %>
-      <%= f.label :location, t('backend.location') %>
-      <%= f.text_field :location %>
-      <%= f.label :description, t('backend.description') %>
-      <%= f.text_area :description, class: 'tinymce' %>
-      <br />
-      <% if current_user.lobby? || admin_or_mananger_edit? %>
-        <%= f.label :general_remarks, t('backend.general_remarks') %>
-        <%= f.text_area :general_remarks, class: 'tinymce' %>
+      <div class="small-12 columns">
+        <%= f.label :title, t('backend.title') %>
+        <%= f.text_field :title %>
+        <%= f.label :location, t('backend.location') %>
+        <%= f.text_field :location %>
+        <%= f.label :description, t('backend.description') %>
+        <%= f.text_area :description, class: 'tinymce' %>
         <br />
-        <%= f.label :lobby_scheduled, t('backend.lobby_date') %>
-        <%= f.text_area :lobby_scheduled, class: 'tinymce' %>
-        <br />
-      <% end %>
-      <% unless current_user.lobby? %>
-        <%= f.label :manager_general_remarks, "Observaciones generales Gestor de agendas" %>
-        <%= f.text_area :manager_general_remarks, class: 'tinymce' %>
-        <br />
-        <%= f.label :scheduled, t('backend.date') %>
-        <%= f.text_field :scheduled, class: 'fdatepicker' %>
-      <% end %>
-      <%= f.label :position_id, t('backend.main_position') %>
-      <%= f.select :position_id, @positions.map{|position| [position.holder.full_name_comma+' - '+position.title, position.id]}, prompt: t('backend.select') %>
+        <% if current_user.lobby? || admin_or_mananger_edit? %>
+          <%= f.label :lobby_scheduled, t('backend.lobby_date') %>
+          <%= f.text_area :lobby_scheduled, class: 'tinymce' %>
+          <br />
+        <% end %>
+        <% unless current_user.lobby? %>
+          <%= f.label :scheduled, t('backend.date') %>
+          <%= f.text_field :scheduled, class: 'fdatepicker' %>
+        <% end %>
+        <%= f.label :position_id, t('backend.main_position') %>
+        <%= f.select :position_id, @positions.map{|position| [position.holder.full_name_comma+' - '+position.title, position.id]}, prompt: t('backend.select') %>
+      </div>
     </fieldset>
 
     <% unless current_user.lobby? %>
       <fieldset><!-- Participants -->
         <legend><%= t('backend.participants') %></legend>
-        <div class="row">
-          <div class="small-10 columns"><%= t('backend.name') %></div>
-          <div class="small-2 columns"></div>
-        </div>
+        <div class="small-12 columns">
+          <div class="row">
+            <div class="small-10 columns"><%= t('backend.name') %></div>
+            <div class="small-2 columns"></div>
+          </div>
 
-        <div id="participants">
-          <%= f.fields_for :participants do |participant| %>
-              <%= render 'participant_fields', f: participant %>
-          <% end %>
+          <div id="participants">
+            <%= f.fields_for :participants do |participant| %>
+                <%= render 'participant_fields', f: participant %>
+            <% end %>
+          </div>
+          <%= link_to_add_association t('backend.add'), f, :participants, :class => "button radius tiny info right add-participant", 'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#participants' %>
         </div>
-        <%= link_to_add_association t('backend.add'), f, :participants, :class => "button radius tiny info right add-participant", 'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#participants' %>
       </fieldset>
     <% end %>
 
@@ -124,7 +112,7 @@
         <%= render 'event_agents', f:f %>
 
       </div>
-
+    </div>
     </fieldset>
 
     <fieldset><!-- Attendees -->
@@ -134,7 +122,9 @@
             <%= render 'attendee_fields', f: attendee %>
         <% end %>
       </div>
-      <%= link_to_add_association t('backend.add'), f, :attendees, :class => "button radius tiny info right add-attendee",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attendees' %>
+      <div class="small-12 column">
+        <%= link_to_add_association t('backend.add'), f, :attendees, :class => "button radius tiny info right add-attendee",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attendees' %>
+      </div>
     </fieldset>
 
     <fieldset><!-- Attachments -->
@@ -145,8 +135,9 @@
             <%= render 'attachment_fields', f: attachment %>
         <% end %>
       </div>
-
-      <%= link_to_add_association t('backend.add'), f, :attachments, :class => "button radius tiny info right add-attachment",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attachments' %>
+      <div class="small-12 columns">
+        <%= link_to_add_association t('backend.add'), f, :attachments, :class => "button radius tiny info right add-attachment",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attachments' %>
+      </div>
     </fieldset>
 
     <% unless current_user.lobby? %>
@@ -155,6 +146,41 @@
         <%= f.text_field :published_at, class: 'fdatepicker' %>
       </fieldset>
     <% end %>
+
+    <% if current_user.lobby? || admin_or_mananger_edit? %>
+    <fieldset>
+      <legend><%= t('backend.general_remarks') %></legend>
+      <%= f.text_area :general_remarks, class: 'tinymce' %>
+    </fieldset>
+
+    <% end %>
+
+    <% unless current_user.lobby? %>
+      <fieldset>
+        <legend><%= t('backend.lobby_general_remarks_title') %></legend>
+        <%= f.text_area :manager_general_remarks, class: 'tinymce' %>
+      </fieldset>
+    <% end %>
+
+    <fieldset class="lobby-contact-info">
+      <legend> Datos de contacto </legend>
+      <div class="small-12 medium-6 columns">
+        <%= f.label :lobby_contact_firstname, "Nombre" %>
+        <%= f.text_field :lobby_contact_firstname, value: calculate_firstname(@event) %>
+      </div>
+      <div class="small-12 medium-6 columns">
+        <%= f.label :lobby_contact_lastname, "Apellidos" %>
+        <%= f.text_field :lobby_contact_lastname, value: calculate_lastname(@event) %>
+      </div>
+      <div class="small-12 medium-6 columns">
+        <%= f.label :lobby_contact_phone, "Teléfono" %>
+        <%= f.text_field :lobby_contact_phone, value: calculate_phone(@event) %>
+      </div>
+      <div class="small-12 medium-6 columns">
+        <%= f.label :lobby_contact_email, "Email" %>
+        <%= f.text_field :lobby_contact_email, value: calculate_email(@event) %>
+      </div>
+    </fieldset>
 
     <fieldset class="cancel-reason-activity">
       <% canceled_event = canceled_event(f.object) %>
@@ -181,8 +207,11 @@
           </div>
         </div>
       <% end %>
-    </fieldset>
+    </fieldset>    
+
   <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
 <% end %>
+
+
 
 <%= javascript_include_tag 'events'%>
