--- a/app/views/events/_event_represented_entities.html.erb
+++ b/app/views/events/_event_represented_entities.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row represented_entities-block" data-new-url="<%= organization_represented_entities_url_pattern(format: :json) %>">
   <div class="small-10 columns">Empresas Representadas</div>
   <div class="small-2 columns"></div>
 
