--- a/app/views/events/_event_represented_entities_fields.html.erb
+++ b/app/views/events/_event_represented_entities_fields.html.erb
@@ -4,7 +4,11 @@
 
     <div class="small-12 medium-6 columns">
       <%= f.label :name, t('backend.represented_entities.name') %>
-      <%= f.text_field :name %>
+      <% if f.object.id.present? %>
+        <%= f.select :name, [[f.object.name, f.object.name]], class: "large-8 columns unique", prompt: t('backend.select') %>
+      <% else %>
+        <%= f.select :name, [], class: "large-8 columns unique", prompt: t('backend.select') %>
+      <% end %>
     </div>
 
     <div class="small-12 columns">
