Add agents and represented entity nesteds

--- a/app/views/events/_event_agents_fields.html.erb
+++ b/app/views/events/_event_agents_fields.html.erb
@@ -3,7 +3,7 @@
     <%= f.hidden_field :id %>
 
     <div class="small-12 medium-6 columns">
-      <%= f.label :name, t('backend.represented_entities.name') %>
+      <%= f.label :name, t('backend.agents.name') %>
       <% if f.object.id.present? %>
         <%= f.select :name, [[f.object.name, f.object.name]], class: "large-8 columns unique", prompt: t('backend.select') %>
       <% else %>
